--- a/.gitignore
+++ b/.gitignore
@@ -158,3 +158,11 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
+# Robot Framework
+log.html
+report.html
+output.xml
+AxeResults.json
+selenium-screenshot*
+interactive_console_output.xml
