--- a/helm-chart/templates/robot-pod.yaml
+++ b/helm-chart/templates/robot-pod.yaml
@@ -29,12 +29,8 @@ spec:
           #!/bin/bash
           #envsubst < ENV/env-template.json > ENV/env-template.json
           #cat ENV/env-template.json
-          ls
           
-          if ! ./run_suite.sh -v Browser:Chrome -v headless:True -v db_backup:yes $TEST_NAME; then
-            echo "Test suite failed."
-            exit 1
-          fi
+          ./run_suite.sh -v Browser:Chrome -v headless:True -v db_backup:yes $TEST_NAME
           echo "###LOG###"
           cat /home/test/output/log.html
           echo "###LOG###"
